# XGBoost-From-Scratch

./: CMakeLists.txt  README.md  pull_csv.py  sp500_test.csv
include/XGTree/: XGNode.hpp  XGTree.hpp
include/dataloader/: DataMatrix.hpp
include/engine/: XGBoost.hpp
include/objective/: Loss.hpp
python-packages/: backtest.py  bindings.cpp  pull_synthetic_data.py  sp500_model.txt  sp500_train.csv  synthetic_train.csv  test.py  test_S&P500.py  test_synthetic_data.py  train.py  verify_engine.py
python-packages/data/: pull_sp500.py  sp500_test.csv  synthetic_test.csv
python-packages/models/: sp500_model.txt  synthetic_model.txt
src/XGTree/: XGNode.cpp  XGTree.cpp
src/dataloader/: DataMatrix.cpp
src/engine/: XGBoost.cpp
src/objective/: Loss.cpp
